# l2e-near

./: .gitignore  README.md
.github/workflows/: branch_manager.yml
src/components/: form.js  navigation.js
src/contracts/ft/: Cargo.toml  rust-toolchain.toml
src/contracts/l2e/: Cargo.toml  README.md  context.json  package-lock.json  package.json  tsconfig.json
src/contracts/l2e/src/: events.rs  external.rs  lib.rs
src/contracts/l2e/tests/: fungible_token.wasm  main.ava.js  non_fungible_token.wasm  test_basics.rs
src/contracts/nft/: Cargo.toml
src/contracts/nft/src/: lib.rs
src/frontend/: package-lock.json  package.json
src/frontend/src/: config.js
src/frontend/src/components/: navigation.js
src/frontend/src/pages/: _app.js
src/frontend/src/pages/admin/: index.js
src/frontend/src/pages/motivator/: index.js
src/frontend/src/pages/participant/: index.js
src/pages/: index.js
src/pages/hello-near/: index.js
src/pages/motivator/: index.js
src/styles/: globals.css
src/wallets/: near.js
