[package]
name = "non-fungible-token"
version = "1.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.5" }
near-contract-standards = { version = "5.5" }

[dev-dependencies] 
near-sdk = { version = "5.5", features = ["unit-testing"] } 